# QHYAstroImager

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  Config.h.in  README.md
.github/workflows/: cmake.yml
CMakeModules/: FindCFITSIO.cmake  FindQHYCCD.cmake
cmake/: CompilerWarnings.cmake  Conan.cmake
src/main/: CMakeLists.txt
src/main/cpp/gui/: CMakeLists.txt  main.cpp
src/main/cpp/gui/ui/: About.cpp  About.hpp  About.ui  CameraInfoDialog.cpp  CameraInfoDialog.hpp  CameraInfoDialog.ui  CameraWidget.cpp  CameraWidget.hpp  CameraWidget.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/main/cpp/lib/: CMakeLists.txt  QHYCCD.cpp  QHYCCD.hpp  QHYCamera.cpp  QHYCamera.hpp
src/main/resources/: CMakeLists.txt  resources.qrc
